<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="89dp">

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:background="@color/cardview_dark_background"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/default_user_id"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold"
        tools:text="@string/default_user_id"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:paddingStart="16dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_post_title"
            android:textStyle="bold"
            android:textSize="12sp"
            tools:text="@string/default_post_title" />

        <TextView
            android:id="@+id/tvBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="9sp"
            android:text="@string/default_post_body"
            tools:text="@string/default_post_body"/>

    </LinearLayout>
</LinearLayout>